--- a/RL/notebooks/huggingface_RL_course/unit1/unit1.ipynb
+++ b/RL/notebooks/huggingface_RL_course/unit1/unit1.ipynb
@@ -648,7 +648,16 @@
         "# TODO: Define a PPO MlpPolicy architecture\n",
         "# We use MultiLayerPerceptron (MLPPolicy) because the input is a vector,\n",
         "# if we had frames as input we would use CnnPolicy\n",
-        "model ="
+        "model = PPO(\n",
+        "    policy = 'MlpPolicy',\n",
+        "    env = env,\n",
+        "    n_steps = 1024,\n",
+        "    batch_size = 64,\n",
+        "    n_epochs = 4,\n",
+        "    gamma = 0.999,\n",
+        "    gae_lambda = 0.98,\n",
+        "    ent_coef = 0.01,\n",
+        "    verbose=1)"
       ]
     },
     {
@@ -973,7 +982,7 @@
         "## Define a repo_id\n",
         "## repo_id is the id of the model repository from the Hugging Face Hub (repo_id = {organization}/{repo_name} for instance ThomasSimonini/ppo-LunarLander-v2\n",
         "## CHANGE WITH YOUR REPO ID\n",
-        "repo_id = \"ThomasSimonini/ppo-LunarLander-v2\" # Change with your repo id, you can't push with mine 😄\n",
+        "repo_id = \"gugg/RL\" # Change with your repo id, you can't push with mine 😄\n",
         "\n",
         "## Define the commit message\n",
         "commit_message = \"Upload PPO LunarLander-v2 trained agent\"\n",
@@ -1146,6 +1155,13 @@
         "Naturally, during the course, we’re going to dive deeper into these concepts but **it’s better to have a good understanding of them now before diving into the next chapters.**\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "QiB1Hna5Gfc3"
+      }
     },
     {
       "cell_type": "markdown",
