add d3rlpy tutos

--- a/reinforcement learning/d3rlpy/data_collection.ipynb
+++ b/reinforcement learning/d3rlpy/data_collection.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "552e864c",
+   "metadata": {},
+   "source": [
+    "reference\n",
+    "\n",
+    "https://d3rlpy.readthedocs.io/en/stable/tutorials/data_collection.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec3d37cc",
+   "metadata": {},
+   "source": [
+    "Prepare environment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "8c418cca",
@@ -17,7 +35,7 @@
    "id": "e3aa9211",
    "metadata": {},
    "source": [
-    "Data Collection with Random Policy"
+    "# Data Collection with Random Policy"
    ]
   },
   {
@@ -75,7 +93,7 @@
    "id": "98fd3bec",
    "metadata": {},
    "source": [
-    "Data Collection with Trained Policy"
+    "# Data Collection with Trained Policy"
    ]
   },
   {
@@ -106,7 +124,7 @@
    "id": "0b1626c2",
    "metadata": {},
    "source": [
-    "Data Collection while Training Policy"
+    "# Data Collection while Training Policy"
    ]
   },
   {
